# grok-switch

./: .gitignore  README.md  SECURITY.md
.github/workflows/: release.yml
app/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: config_toml.rs  health.rs  lib.rs  main.rs  models.rs  secret_store.rs  speedtest.rs  store.rs  tools.rs  tray.rs  usage.rs
app/src/components/: ProviderEditor.tsx  ThemeToggle.tsx  ToolsPanel.tsx  UpdateChecker.tsx
app/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  textarea.tsx
app/src/lib/: api.ts  theme.ts  updater.ts
