[package]
name = "grok-switch"
version = "0.1.0"
description = "Grok Switch — local Grok Build CLI provider switcher (macOS / Windows)"
authors = ["Grok Switch contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "grok_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
dirs = "6"
thiserror = "2"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls", "json"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
